styled other news and added footer

--- a/code/index.html
+++ b/code/index.html
@@ -30,51 +30,75 @@
     <div class="gridrow1">
       <h1>Güggali-Zunft has well known "Zunftmeister."</h1>
     </div>
-    <img class="lucerne" src="assets/lucerne.jpg" alt="Lucerne at night">
+    <img class="img-lucerne" src="assets/lucerne.jpg" alt="Lucerne at night">
     <div class="gridrow3">
       <p>The new leader of the Güggali-Zunft of Lucerne in 2024 is again Laurentius Moser for the third time in a row.
-        <a
-          href="https://www.bzbasel.ch/zentralschweiz/stadt-region-luzern/fasnacht-2024-gueueggali-zunft-luzerner-stadtoriginal-laurenzius-moser-ist-erneut-zunftmeister-ld.2567270">To
-          the news</a>
       </p>
+      <button><a
+          href="https://www.bzbasel.ch/zentralschweiz/stadt-region-luzern/fasnacht-2024-gueueggali-zunft-luzerner-stadtoriginal-laurenzius-moser-ist-erneut-zunftmeister-ld.2567270">To
+          the news</a></button>
     </div>
   </section>
 
   <section class="other-news">
     <!-- The other news  -->
-    <div class="news01">
-      <h2>What not to miss in the region Lake Constance</h2>
-      <img src="assets/other-news-01.jpg" alt="picture of drummers">
-      <p>For the Swabian-Alemannic carnival guilds, the carnival begins on January 6. On this day, the big carnival
-        proclamation in the old town of Constance is traditionally on the agenda. <a
-          href="https://www.suedkurier.de/region/kreis-konstanz/konstanz/fastnacht/termine-fasnacht-2024-konstanz;art1369001,11361493">To
-          the news</a></p>
+    <div class="lakecon">
+      <h2 class="head-lakecon">What not to miss in the region Lake Constance</h2>
+      <img class="img-lakecon" src="assets/other-news-01.jpg" alt="picture of drummers">
+      <div>
+        <p class="p-lakecon">For the Swabian-Alemannic carnival guilds, the carnival begins on January 6. On this day,
+          the
+          big carnival
+          proclamation in the old town of Constance is traditionally on the agenda.</p>
+        <button><a
+            href="https://www.suedkurier.de/region/kreis-konstanz/konstanz/fastnacht/termine-fasnacht-2024-konstanz;art1369001,11361493">To
+            the news</a></button>
+      </div>
     </div>
-    <div class="news02">
-      <h2>"Guggemusig" anniversaries in Lucerne</h2>
-      <img src="assets/guggemusig.jpg" alt="Guggemusig">
-      <p>These groups turn 50, 60 or even 75 years old. They explain which songs should always stay in their repertoire.
-        Find the six "Guggemusig" Groups and learn more about them. <a
-          href="https://www.luzernerzeitung.ch/zentralschweiz/stadt-region-luzern/stadtregion-luzern-grende-geheimnisse-gruendungsmythen-diese-guuggenmusigen-jubilieren-2024-ld.2563047?reduced=true">To
-          the news</a></p>
+    <div class="lucann">
+      <h2 class="head-lucann">"Guggemusig" anniversaries in Lucerne</h2>
+      <img class="img-lucann" src="assets/guggemusig.jpg" alt="Guggemusig">
+      <div>
+        <p class="p-lucann">These groups turn 50, 60 or even 75 years old. They explain which songs should always stay
+          in
+          their repertoire.
+          Find the six "Guggemusig" Groups and learn more about them. </p>
+        <button><a
+            href="https://www.luzernerzeitung.ch/zentralschweiz/stadt-region-luzern/stadtregion-luzern-grende-geheimnisse-gruendungsmythen-diese-guuggenmusigen-jubilieren-2024-ld.2563047?reduced=true">To
+            the news</a></button>
+      </div>
     </div>
-    <div class="news03">
-      <h2>Fasnacht in the old town of Willisau</h2>
-      <img src="assets/willisau.jpg" alt="Guggemusig Willisau">
-      <p>The event in Willisau starts at 7pm sharp with a bang. Six different "Guggemusig" Groups show their new songs
-        2024 and walked through the old town of Willisau. <a
-          href="https://www.pilatustoday.ch/zentralschweiz/es-kann-losgehen-die-fasnacht-2024-ist-kurz-aber-intensiv-und-verrueckt-155953582">To
-          the news</a></p>
+    <div class="willisau">
+      <h2 class="head-willisau">Fasnacht in the old town of Willisau</h2>
+      <img class="img-willisau" src="assets/willisau.jpg" alt="Guggemusig Willisau">
+      <div>
+        <p class="p-willisau">The event in Willisau starts at 7pm sharp with a bang. Six different "Guggemusig" Groups
+          show their new songs
+          2024 and walked through the old town of Willisau. </p>
+        <button><a
+            href="https://www.pilatustoday.ch/zentralschweiz/es-kann-losgehen-die-fasnacht-2024-ist-kurz-aber-intensiv-und-verrueckt-155953582">To
+            the news</a></button>
+      </div>
     </div>
-    <div class="news04">
-      <h2>The Fasnacht in both of Basel</h2>
-      <img src="assets/basel.jpg" alt="Basel Fasnacht">
-      <p>Find here compiled an overwiew of all activities during the carnival in Basel. That way you can make sure you
-        don't miss anything. <a
-          href="https://www.bazonline.ch/von-chienbaese-bis-cherusgaelti-die-grosse-uebersicht-zur-baselbieter-fasnacht-2024-772973134562">To
-          the news</a></p>
+    <div class="basel">
+      <h2 class="head-basel">The Fasnacht in both of Basel</h2>
+      <img class="img-basel" src="assets/basel.jpg" alt="Basel Fasnacht">
+      <div>
+        <p class="p-basel">Find here compiled an overwiew of all activities during the carnival in Basel. That way you
+          can
+          make sure you
+          don't miss anything. </p>
+        <button><a
+            href="https://www.bazonline.ch/von-chienbaese-bis-cherusgaelti-die-grosse-uebersicht-zur-baselbieter-fasnacht-2024-772973134562">To
+            the news</a></button>
+      </div>
     </div>
   </section>
+
+  <footer>
+    <p>Made with ♥ and ♫ in Switzerland.</p>
+  </footer>
+
 </body>
 
 </html>
