styling of footer

--- a/code/index.html
+++ b/code/index.html
@@ -28,7 +28,7 @@
   <section class="big-news">
     <!-- The big news content -->
     <div class="gridrow1">
-      <h1>Güggali-Zunft has well known "Zunftmeister."</h1>
+      <h1>Güggali-Zunft has well known "Zunftmeister"</h1>
     </div>
     <img class="img-lucerne" src="assets/lucerne.jpg" alt="Lucerne at night">
     <div class="gridrow3">
@@ -96,7 +96,12 @@
   </section>
 
   <footer>
-    <p>Made with ♥ and ♫ in Switzerland.</p>
+    <p class="made">Made with ♥ and ♫ in Switzerland by Linda.</p>
+    <a href="https://www.linkedin.com/in/lindafrischknecht/"><img class="linkedin" width="30" height="30"
+        src="https://img.icons8.com/ios-glyphs/30/linkedin.png" alt="linkedin" /></a>
+    <p class="copyright">Pictures from <a href="https://unsplash.com/">Unsplash</a> and icons from <a
+        href="https://icons8.com/">icon8</a>.
+    </p>
   </footer>
 
 </body>
