created headline article section and article cards

--- a/code/index.html
+++ b/code/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Change the title below -->
-    <title>Bookworm News - a News Site for Bibliophiles</title>
+    <title>Bookworm News</title>
     <link rel="icon" type="image/x-icon" href="./assets/favico.ico">
     <link rel="stylesheet" href="./style.css" />
     <!-- dont forget the meta tag for responsiveness -->
@@ -16,6 +16,12 @@
         <div class="row align-items-center justify-content-between">
           <div class="logo">
             <a href="file:///Users/almaherrstrom/Desktop/technigo-projects/project-news-site/code/index.html"><img class="logo-img" src="./assets/logo-book.png" /></a>
+            <div class="logo-name">
+              <h2>BookWorm News</h2>
+            </div>
+          </div>
+          <div class="menu-btn">
+            <img src="./assets/hamburger-menu-white.png" alt="Menu">
           </div>
           <nav class="nav">
             <ul>
@@ -29,16 +35,100 @@
         </div>
       </div>
     </header>
+    <!--End of Logo/navbar/header-->
     <main>
 
-      <!--MAIN SECTION START HERE-->
+    <!--MAIN SECTION START HERE-->
     <section class="big-news">
       <!-- The big news content -->
+      <div class="article-container">
+        <img src="./assets/headline-image.jpg" alt="Blonde young girl dressed in pink reading a book">
+        <div class="text-container">
+            <h1>Good news about mental health and reading for fun as a child</h1>
+            <p>Young children who spend about 12 hours a week reading for pleasure tend to do better on cognitive tests, according to research published in the journal Psychological Medicine.</p>
+            <button class="button-1" role="button">Read more here</button>
+          </div>
+    </div>
     </section>
+    <!--BIG NEWS SECTION ENDS HERE-->
 
-    <section class="">
+    <section class="other-news">
       <!-- The other news  -->
+        <div class="article-card">
+          <figure>
+            <img src="./assets/article-image1.jpg" alt="Picture 1">
+            <figcaption>
+              <h3>Best children's books coming out in Spring 2024</h3>
+            </figcaption>
+          </figure>
+          <p>Here's our selection of top new titles coming out during Spring term 2024 and available to buy or preorder in January, February and March 2024.</p>
+        </div>
+        <div class="article-card">
+          <figure>
+            <img src="./assets/article-image2.jpg" alt="Picture 2">
+            <figcaption>
+              <h3>Old book, new look: why the classics are flying off the shelves</h3>
+            </figcaption>
+          </figure>
+          <p>Sales have risen 10%, thanks to TV adaptations and clever marketing. As four publishing houses unveil new looks, John Walsh investigates the battle for new readers</p>
+        </div>
+        <div class="article-card">
+          <figure>
+            <img src="./assets/article-image3.jpg" alt="Picture 3">
+            <figcaption>
+              <h3>Asplund's masterpiece: Stockholm City Library</h3>
+            </figcaption>
+          </figure>
+          <p>The City Library at Sveavägen opened in 1928 and quickly became an architectural icon. Asplund was in the midst of planning the building just as a new architectural style, the Modernism was rising; here we can see traces in the transition from the earlier styles national Romanticism and Neoclassicism.</p>
+        </div>
+        <div class="article-card">
+          <figure>
+            <img src="./assets/article-image4.jpg" alt="Picture 4">
+            <figcaption>
+              <h3>Daily, consistent parental reading in the first year of life improves infants' language scores</h3>
+            </figcaption>
+          </figure>
+          <p>Daily reading improved language development in infants 12 months and younger, according to a recent study by researchers at the Marshall University Joan C. Edwards School of Medicine</p>
+        </div>
+        <div class="article-card">
+          <figure>
+            <img src="./assets/article-image5.jpg" alt="Picture 5">
+            <figcaption>
+              <h3>Coffee and reading...perfect companions</h3>
+            </figcaption>
+          </figure>
+          <p>It's no wonder so many book stores also serve coffee. We recognize that both books and coffee bring us to a place of near silence and easy contemplation. Sip the coffee and turn the page.</p>
+        </div>
+        <div class="article-card">
+          <figure>
+            <img src="./assets/article-image6.jpg" alt="Picture 6">
+            <figcaption>
+              <h3>Fake books: the controversial interiors trend for literary pretenders</h3>
+            </figcaption>
+          </figure>
+          <p>Want to create the perfect Zoom background? Keen to appear well read when you actually spend your time scrolling TikTok on the toilet? There is now an answer</p>
+        </div>
+        <div class="article-card">
+          <figure>
+            <img src="./assets/article-image7.jpg" alt="Picture 7">
+            <figcaption>
+              <h3>Antique and second-hand book market, every weekend in Parc Georges Brassens</h3>
+            </figcaption>
+          </figure>
+          <p>For over 35 years, the halles du parc Georges Brassens have been transformed into an open-air bookshop every weekend, for the antique and second-hand book market.</p>
+        </div>
+        <div class="article-card">
+          <figure>
+            <img src="./assets/article-image8.jpg" alt="Picture 8">
+            <figcaption>
+              <h3>New Books To Read in 2024</h3>
+            </figcaption>
+          </figure>
+          <p>In this preview guide, discover some of the most anticipated new releases coming out in 2024! From edge-of-your-seat thrillers to swoon-worthy love stories, you’ll be the first to know when your next favorite books are hitting the bookshelves.</p>
+        </div>
+
     </section>
+    <!--OTHER NEWS CARDS ENDS HERE-->
   </main>
   </body>
 </html>
