--- a/code/index.html
+++ b/code/index.html
@@ -43,9 +43,9 @@
   <!-- End of the HEADER -->
 
   <!--GRID STARTS HERE-->
-  <section class="grid-parent">
+  <section class="wrapper">
 
-    <div class="grid-item grid-a">
+    <div class="top-article">
       <h1>ENCHANTMENT UNVEILED</h1>
       <img class=venice1 src="Venice2.jpg">
       &nbsp;
@@ -76,52 +76,59 @@
       </a>
     </div>
 
-    <div class="grid-item grid-b">
-      <img class="helsinki" src="Helsinki.jpg">
-      &nbsp;
-      <a href="www.google.com">Helsinki's Nordic Wonderland: Embracing Finnish Culture</a>
-    </div>
-
-    <div class="grid-item grid-c">
-      <img class="venice2" src="Venice1.jpg">
-      &nbsp;
-      <a href="www.google.com">Venice: Navigating the Timeless Waterways of the Floating City</a>
-    </div>
-
-    <div class="grid-item lonly">
-      <p> Embrace the unknown</p>
-      &nbsp;
-      <p>for it is where you'll find the magic of discovery</p>
-    </div>
-
-    <div class="grid-item grid-d">
-      <img class="croatia" src="Croatia.jpg">
+    <div class="doubleArticleHelsinki">
+      <img class="helsinkiImg" src="Helsinki.jpg">
       &nbsp;
       <a href="www.google.com">
-        <p>Croatia's Hidden Gems: An Authentic Journey through Stunning Adriatic Coastlines</p>
+        <h3>Helsinki's Nordic Wonderland: Embracing Finnish Culture</h3>
+      </a>
+    </div>
+
+    <div class="doubleArticleVenice">
+      <img class="veniceImg" src="Venice1.jpg">
+      &nbsp;
+      <a href="www.google.com">
+        <h3>
+          Venice: Navigating the Timeless Waterways of the Floating City
+        </h3>
+      </a>
+    </div>
+
+    <div class="centerHeader">
+      <h2> Embrace the unknown</h2>
+      &nbsp;
+      <h2>for it is where you'll find the magic of discovery</h2>
+    </div>
+
+    <div class="trippleArticleCroatia">
+      <img class="croatiaImg" src="Croatia.jpg">
+      &nbsp;
+      <a href="www.google.com">
+        <h3>Croatia's Hidden Gems: An Authentic Journey through Stunning Adriatic Coastlines</h3>
       </a>
       &nbsp;
     </div>
 
-    <div class="grid-item grid-e">
-      <img class="sardinia" src="Sardinia.jpg">
+    <div class="trippleArticleSardinia">
+      <img class="sardiniaImg" src="Sardinia.jpg">
       &nbsp;
       <a href="www.google.com">
-        <p>Sardinia's Sun-Kissed Charms: Discovering Italy's Enchanting Mediterranean Island</p>
+        <h3>Sardinia's Sun-Kissed Charms: Discovering Italy's Enchanting Mediterranean Island
+        </h3>
       </a>
       &nbsp;
     </div>
 
-    <div class="grid-item grid-f">
-      <img class="barcelona" src="Barcelona.jpg">
+    <div class="trippleArticleBarcelona">
+      <img class="barcelonaImg" src="Barcelona.jpg">
       &nbsp;
       <a href="www.google.com">
-        <p>Barcelona's Architectural Marvels: Gaudi's Legacy and Beyond</p>
+        <h3>Barcelona's Architectural Marvels: Gaudi's Legacy and Beyond</h3>
       </a>
       &nbsp;
     </div>
 
-    <div class="grid-item grid-g">
+    <div class="bottomAricle">
       <p> Welcome to the Unseen, your passport to extraordinary journeys off the beaten path. Step away from the
         ordinary and embrace the allure of hidden destinations that few have had the privilege to explore.</p>
       &nbsp;
