--- a/code/index.html
+++ b/code/index.html
@@ -5,6 +5,9 @@
     <title>Veggie News Site</title>
     <link rel="stylesheet" href="./style.css" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Almendra+SC&family=Montserrat&family=Playpen+Sans&display=swap" rel="stylesheet">
   </head>
 
   <body>
