Added logo and layout to header

--- a/code/index.html
+++ b/code/index.html
@@ -13,8 +13,9 @@
   <body>
     <header>
       <!-- Some kind of logo and navbar -->
+      <img class="logo" src="./assets/salad-outline.svg" alt="logo with picture of a salad bowl">
       <h1>Veggie News</h1>
-      <nav class="menu">
+      <nav class="main-menu">
         <a href="#">Take me home</a>
         <a href="#">Get that protein!</a>
         <a href="#">Fruits & veg</a>
