Added more small news cards, cleaned up the code and made smaller changes to the layout of the header.

--- a/code/index.html
+++ b/code/index.html
@@ -61,5 +61,25 @@
         <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
         <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
+    <div class="small-news">
+      <h3>News</h3>
+      <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+    </div>
+    <div class="small-news">
+      <h3>News</h3>
+      <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+    </div>
+    <div class="small-news">
+      <h3>News</h3>
+      <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+    </div>
+    <div class="small-news">
+      <h3>News</h3>
+      <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+    </div>
   </body>
 </html>
