--- a/code/index.html
+++ b/code/index.html
@@ -17,10 +17,15 @@
     <div class="header">
       <img class=logoimg src="./assets/fasnacht-logo.jpg" alt="Fasnacht Logo" height="100px">
       <nav class="main-nav">
-        <a href="#">What is Fasnacht?</a>
-        <a href="#">Where to celebrate?</a>
-        <a href="#">Archive</a>
-        <a href="#">Copyright & Impressum</a>
+        <input id="menu" type="checkbox">
+        <label class="menu-label" for="menu" tabindex="0"><img width="50" height="50"
+            src="https://img.icons8.com/ios/50/menu--v1.png" alt="menu--v1" /></label>
+        <ul>
+          <li><a href="#">What is Fasnacht?</a></li>
+          <li></li><a href="#">Where to celebrate?</a></li>
+          <li></li><a href="#">Archive</a></li>
+          <li></li><a href="#">Copyright & Impressum</a></li>
+        </ul>
       </nav>
     </div>
   </header>
