--- a/code/index.html
+++ b/code/index.html
@@ -47,57 +47,73 @@
 
   <section class="other-news">
     <!-- The other news  -->
-    <div class="lakecon">
-      <h2 class="head-lakecon">What not to miss in the region Lake Constance</h2>
-      <img class="img-lakecon" src="assets/other-news-01.jpg" alt="picture of drummers">
-      <div>
-        <p class="p-lakecon">For the Swabian-Alemannic carnival guilds, the carnival begins on January 6. On this day,
-          the
-          big carnival
-          proclamation in the old town of Constance is traditionally on the agenda.</p>
-        <button><a
-            href="https://www.suedkurier.de/region/kreis-konstanz/konstanz/fastnacht/termine-fasnacht-2024-konstanz;art1369001,11361493">To
-            the news</a></button>
-      </div>
+    <!--other news 01-->
+    <div class="head-lakecon">
+      <h2>What not to miss in the region Lake Constance</h2>
     </div>
-    <div class="lucann">
-      <h2 class="head-lucann">"Guggemusig" anniversaries in Lucerne</h2>
-      <img class="img-lucann" src="assets/guggemusig.jpg" alt="Guggemusig">
-      <div>
-        <p class="p-lucann">These groups turn 50, 60 or even 75 years old. They explain which songs should always stay
-          in
-          their repertoire.
-          Find the six "Guggemusig" Groups and learn more about them. </p>
-        <button><a
-            href="https://www.luzernerzeitung.ch/zentralschweiz/stadt-region-luzern/stadtregion-luzern-grende-geheimnisse-gruendungsmythen-diese-guuggenmusigen-jubilieren-2024-ld.2563047?reduced=true">To
-            the news</a></button>
-      </div>
+    <div class="img-lakecon">
+      <img src="assets/other-news-01.jpg" alt="picture of drummers">
     </div>
-    <div class="willisau">
-      <h2 class="head-willisau">Fasnacht in the old town of Willisau</h2>
-      <img class="img-willisau" src="assets/willisau.jpg" alt="Guggemusig Willisau">
-      <div>
-        <p class="p-willisau">The event in Willisau starts at 7pm sharp with a bang. Six different "Guggemusig" Groups
-          show their new songs
-          2024 and walked through the old town of Willisau. </p>
-        <button><a
-            href="https://www.pilatustoday.ch/zentralschweiz/es-kann-losgehen-die-fasnacht-2024-ist-kurz-aber-intensiv-und-verrueckt-155953582">To
-            the news</a></button>
-      </div>
+    <div class="p-lakecon">
+      <p>For the Swabian-Alemannic carnival guilds, the carnival begins on January 6. On this day,
+        the
+        big carnival
+        proclamation in the old town of Constance is traditionally on the agenda.</p>
+      <button><a
+          href="https://www.suedkurier.de/region/kreis-konstanz/konstanz/fastnacht/termine-fasnacht-2024-konstanz;art1369001,11361493">To
+          the news</a></button>
     </div>
-    <div class="basel">
-      <h2 class="head-basel">The Fasnacht in both of Basel</h2>
-      <img class="img-basel" src="assets/basel.jpg" alt="Basel Fasnacht">
-      <div>
-        <p class="p-basel">Find here compiled an overwiew of all activities during the carnival in Basel. That way you
-          can
-          make sure you
-          don't miss anything. </p>
-        <button><a
-            href="https://www.bazonline.ch/von-chienbaese-bis-cherusgaelti-die-grosse-uebersicht-zur-baselbieter-fasnacht-2024-772973134562">To
-            the news</a></button>
-      </div>
+
+    <!--other news 02-->
+    <div class="head-lucann">
+      <h2>"Guggemusig" anniversaries in Lucerne</h2>
     </div>
+    <div class="img-lucann">
+      <img src="assets/guggemusig.jpg" alt="Guggemusig">
+    </div>
+    <div class="p-lucann">
+      <p>These groups turn 50, 60 or even 75 years old. They explain which songs should always stay
+        in
+        their repertoire.
+        Find the six "Guggemusig" Groups and learn more about them. </p>
+      <button><a
+          href="https://www.luzernerzeitung.ch/zentralschweiz/stadt-region-luzern/stadtregion-luzern-grende-geheimnisse-gruendungsmythen-diese-guuggenmusigen-jubilieren-2024-ld.2563047?reduced=true">To
+          the news</a></button>
+    </div>
+
+    <!--other news 03-->
+    <div class="head-willisau">
+      <h2>Fasnacht in the old town of Willisau</h2>
+    </div>
+    <div class="img-willisau">
+      <img src="assets/willisau.jpg" alt="Guggemusig Willisau">
+    </div>
+    <div class="p-willisau">
+      <p>The event in Willisau starts at 7pm sharp with a bang. Six different "Guggemusig" Groups
+        show their new songs
+        2024 and walked through the old town of Willisau. </p>
+      <button><a
+          href="https://www.pilatustoday.ch/zentralschweiz/es-kann-losgehen-die-fasnacht-2024-ist-kurz-aber-intensiv-und-verrueckt-155953582">To
+          the news</a></button>
+    </div>
+
+    <!--oter news 04-->
+    <div class="head-basel">
+      <h2>The Fasnacht in both of Basel</h2>
+    </div class="img-basel">
+    <div>
+      <img src="assets/basel.jpg" alt="Basel Fasnacht">
+    </div>
+    <div class="p-basel">
+      <p>Find here compiled an overwiew of all activities during the carnival in Basel. That way you
+        can
+        make sure you
+        don't miss anything. </p>
+      <button><a
+          href="https://www.bazonline.ch/von-chienbaese-bis-cherusgaelti-die-grosse-uebersicht-zur-baselbieter-fasnacht-2024-772973134562">To
+          the news</a></button>
+    </div>
+
   </section>
 
   <footer>
