made part of the heading responsive

--- a/code/index.html
+++ b/code/index.html
@@ -15,17 +15,17 @@
   <header>
     <!-- Some kind of logo and navbar -->
     <div class="header">
-      <img class=logoimg src="./assets/fasnacht-logo.jpg" alt="Fasnacht Logo" height="50px">
+      <img class=logoimg src="./assets/fasnacht-logo.jpg" alt="Fasnacht Logo" height="100px">
       <input id="menu" type="checkbox">
       <nav class="main-nav">
         <ul>
-          <li><a href="#">What is Fasnacht?</a></li>
-          <li></li><a href="#">Where to celebrate?</a></li>
-          <li></li><a href="#">Archive</a></li>
-          <li></li><a href="#">Copyright & Impressum</a></li>
+          <li><button><a href="#">What is Fasnacht?</a></button></li>
+          <li><button><a href="#">Where to celebrate?</a></button></li>
+          <li><button><a href="#">Archive</a></button></li>
+          <li><button><a href="#">Copyright & Impressum</a></button></li>
         </ul>
       </nav>
-      <label class="menu-label" for="menu" tabindex="0"><img width="50" height="50"
+      <label class="menu-label" for="menu" tabindex="0"><img id=hamburger width="50" height="100"
           src="https://img.icons8.com/ios/50/menu--v1.png" alt="menu--v1" /></label>
     </div>
   </header>
