--- a/code/index.html
+++ b/code/index.html
@@ -36,7 +36,6 @@
 
       <!-- This is the menu for desktop and tablet -->
       <ul class="navlist">
-        </li>
         <li> <a class="active" href="#news"> News </a> </li>
         <li> <a href="#about"> About </a> </li>
         <li> <a href="#archive"> Archive </a> </li>
@@ -65,11 +64,13 @@
         <img src="./small-puppy.JPG" alt="Picture of small puppy">
       </div>
 
-      <div class="main-article-content">
+      <div class="article-content">
         <h2> 4 week old Nellie</h2>
         <p> Nellie is now 4 weeks. At four weeks, a puppy is a bundle of fur and energy, eyes wide open to the
           world. </p>
-        <a class="article-link" href="#"> Read more</a>
+        <div class="article-link">
+          <a href="#"> Read more</a>
+        </div>
       </div>
     </section>
 
@@ -82,7 +83,9 @@
           <h2> Nellie getting comfy </h2>
           <p> At six weeks, a puppy effortlessly embraces comfort. Sleepy sighs
             fill the air. </p>
-          <a class="article-link" href="#"> Read more</a>
+          <div class="article-link">
+            <a href="#"> Read more</a>
+          </div>
         </div>
       </div>
 
@@ -93,9 +96,10 @@
         <div class="article-content">
           <h2> Mollie chilling </h2>
           <p> Playfulness gives way to
-            sweet naps, and their fluffy innocence captivates hearts.
-          </p>
-          <a class="article-link" href="#"> Read more</a>
+            sweet naps, and their fluffy innocence captivates hearts. </p>
+          <div class="article-link">
+            <a href="#"> Read more</a>
+          </div>
         </div>
       </div>
 
@@ -105,22 +109,24 @@
         </div>
         <div class="article-content">
           <h2> Mollie cuddling </h2>
-          <p> Mollie is cuddling with her new friend Winnie-the-Pooh. They are best sleeping buddies.
-          </p>
-          <a class="article-link" href="#"> See more</a>
+          <p> Mollie is cuddling with her new friend Winnie-the-Pooh. They are best sleeping buddies. </p>
+          <div class="article-link">
+            <a href="#"> See more</a>
+          </div>
         </div>
       </div>
 
       <div class="article-body">
         <div class="article-picture">
-          <img class="article-image" src="./waiting-to-play.JPG" alt="Puppy waiting to play">
+          <img src="./waiting-to-play.JPG" alt="Puppy waiting to play">
         </div>
         <div class="article-content">
           <h2> Waiting to play </h2>
           <p> Nellie is getting more and more playful for every day. Here you can see
-            her
-            waiting for someone to play. </p>
-          <a class="article-link" href="#"> See more</a>
+            her waiting for someone to play. </p>
+          <div class="article-link">
+            <a href="#"> See more</a>
+          </div>
         </div>
       </div>
 
@@ -132,7 +138,9 @@
           <h2> Ready for christmas </h2>
           <p> Wrapped in festive wonder, a puppy experiences their first Christmas. Wide-eyed, they explore twinkling
             lights, playful bows, and the joy of shared moments. </p>
-          <a class="article-link" href="#"> See more</a>
+          <div class="article-link">
+            <a href="#"> See more</a>
+          </div>
         </div>
       </div>
     </section>
@@ -140,12 +148,15 @@
 
   <footer>
     <ul class="footer-container">
-      <li class="name"> Created by Erica Mechler </li>
+      <li class="name">
+        <p> Created by Erica Mechler </p>
+      </li>
       <li>
         <img class="technigo-logo" src="./logo.svg" alt="Technigo-logo">
       </li>
-      <li class="follow-text"> Follow <a class="linkedin-logo"
-          href="https://www.linkedin.com/in/erica-mechler-a39b73a8/" target="blank">
+      <li class="follow-text">
+        <p> Follow </p>
+        <a class="linkedin-logo" href="https://www.linkedin.com/in/erica-mechler-a39b73a8/" target="blank">
           Linkedin </a>
       </li>
     </ul>
