Added a button, changed some headlines and the font-size of the nav bar.

--- a/code/index.html
+++ b/code/index.html
@@ -39,25 +39,26 @@
       <p class="main-news-article">      
         Artichoke aubergine beet beetroot bell bok bush cauliflower chard chestnut chickweed choy coriander courgette dandelion desert dulse epazote fava gourd green greens j. Cabbage cauliflower chickpea coriander courgette dandelion eggplant endive gourd greens gumbo. Avocado beet bologi bona burdock catsear caulie celery chard chickpea corn courgette cress dandelion epazote esse garlic gourd green gumbo j. Aubergine beetroot bok bush celtuce chickweed chicory courgette garbanzo gourd horseradish.
       </p>
+      <button>Read more</button>
     </section>
 
     <div class="small-news">
-        <h3>News</h3>
+        <h3>Apples for days</h3>
         <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
         <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
     <div class="small-news">
-        <h3>News</h3>
+        <h3>The burger battle settled</h3>
         <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
         <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
     <div class="small-news">
-        <h3>News</h3>
+        <h3>She made cheesecake cheeseless</h3>
         <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
         <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
     <div class="small-news">
-        <h3>News</h3>
+        <h3>Tofu takes on trains</h3>
         <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
         <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
