--- a/code/index.html
+++ b/code/index.html
@@ -13,9 +13,11 @@
 
   <body>
     <header>
-      <!-- Some kind of logo and navbar -->
       <img class="logo" src="./assets/salad-outline.svg" alt="logo with picture of a salad bowl">
-      <h1>Veggie News</h1>
+      <div> 
+        <h1>Veggie News</h1>
+        <p class="site-subtitle">- your source to the latest in veggie eating!</p>
+      </div>
       <nav class="main-menu">
         <a href="#">Take me home</a>
         <a href="#">Get that protein!</a>
@@ -44,47 +46,71 @@
     </section>
 
     <div class="small-news">
-        <h3>Apples for days</h3>
+      <h3>Apples for days</h3>
+      <div class="photo-display">
         <img src="./assets/DSC_0003.JPG" alt="Green apples next to a pond">
         <p class="caption">Photo by Erika Wernbro</p>
-        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      </div>
+      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
     <div class="small-news">
-        <h3>The burger battle settled</h3>
+      <h3>The burger battle settled</h3>
+      <div class="photo-display"> 
         <img src="./assets/delfina-cocciardi-NDPBK-d-03M-unsplash.jpg" alt="Veggie burger">
         <p class="caption">Photo by <a href="https://unsplash.com/@dcocciardi?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Delfina Cocciardi</a> on <a href="https://unsplash.com/photos/burger-with-lettuce-and-tomato-NDPBK-d-03M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
-        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      </div>
+      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
     <div class="small-news">
-        <h3>She made cheesecake cheeseless</h3>
+      <h3>She made cheesecake cheeseless</h3>
+      <div class="photo-display">  
         <img src="./assets/pexels-anna-shvets-5964621.jpg" alt="Baker with her pastries">
-        <p class="caption">Photo by Anna Shvets on <a href="https://www.pexels.com/sv-se/foto/mat-kvinna-leende-arbete-5964621/">Pexels</a></p>
-        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+        <p class="caption">
+          Photo by Anna Shvets on <a href="https://www.pexels.com/sv-se/foto/mat-kvinna-leende-arbete-5964621/">Pexels</a>
+        </p>
+      </div>
+      <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
     <div class="small-news">
-        <h3>Tofu takes the train</h3>
+      <h3>
+        Tofu takes the train
+      </h3>
+      <div class="photo-display">
         <img src="./assets/pexels-brett-sayles-981306.jpg" alt="Union Pacific train on its tracks">
-        <p class="caption">Photo by Brett Sayles on <a href="https://www.pexels.com/sv-se/foto/tag-fordon-jarnvag-jarnvagsspar-981306/">Pexels</a></p>
-        <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+        <p class="caption">
+          Photo by Brett Sayles on <a href="https://www.pexels.com/sv-se/foto/tag-fordon-jarnvag-jarnvagsspar-981306/">Pexels</a>
+        </p>
+      </div>
+      <p>
+        Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.
+      </p>
     </div>
     <div class="small-news">
       <h3>News</h3>
-      <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      <div class="photo-display">
+        <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
     <div class="small-news">
       <h3>News</h3>
-      <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      <div class="photo-display">
+        <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
     <div class="small-news">
       <h3>News</h3>
-      <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      <div class="photo-display">
+        <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
     <div class="small-news">
       <h3>News</h3>
-      <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      <div class="photo-display">
+        <img src="./assets/Tomatoes.jpg" alt="Tomato plant with some tomatoes turning red">
+      </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
     </div>
   </body>
