clead up the css and added some styling to the heading

--- a/code/index.html
+++ b/code/index.html
@@ -15,7 +15,7 @@
   <header>
     <!-- Some kind of logo and navbar -->
     <div class="header">
-      <img class=logoimg src="./assets/fasnacht-logo.jpg" alt="Fasnacht Logo" height="100px">
+      <a href="#"><img class=logoimg src="./assets/fasnacht-logo.jpg" alt="Fasnacht Logo" height="100px"></a>
       <input id="menu" type="checkbox">
       <nav class="main-nav">
         <ul>
