--- a/code/index.html
+++ b/code/index.html
@@ -33,11 +33,11 @@
   <section class="big-news">
     <!-- The big news content -->
     <div class="gridrow1">
-      <h1>Güggali-Zunft has well known "Zunftmeister"</h1>
+      <h1>Güüggali-Zunft has well known "Zunftmeister"</h1>
     </div>
     <img class="img-lucerne" src="assets/lucerne.jpg" alt="Lucerne at night">
     <div class="gridrow3">
-      <p>The new leader of the Güggali-Zunft of Lucerne in 2024 is again Laurentius Moser for the third time in a row.
+      <p>The new leader of the Güüggali-Zunft of Lucerne in 2024 is again Laurentius Moser for the third time in a row.
       </p>
       <button><a
           href="https://www.bzbasel.ch/zentralschweiz/stadt-region-luzern/fasnacht-2024-gueueggali-zunft-luzerner-stadtoriginal-laurenzius-moser-ist-erneut-zunftmeister-ld.2567270">To
