started work on news-site-project

--- a/code/index.html
+++ b/code/index.html
@@ -1,23 +1,86 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <meta charset="utf-8" />
-    <!-- Change the title below -->
-    <title>News Site</title>
-    <link rel="stylesheet" href="./style.css" />
-    <!-- dont forget the meta tag for responsiveness -->
-  </head>
-  <body>
-    <header>
-      <!-- Some kind of logo and navbar -->
-    </header>
 
+<head>
+  <meta charset="utf-8" />
+  <!-- Change the title below -->
+  <title>Succy News</title>
+  <link rel="stylesheet" href="./style.css" />
+  <!-- dont forget the meta tag for responsiveness -->
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+</head>
+
+<body>
+  <header>
+    <!-- Some kind of logo and navbar -->
+
+    <h1>Succy News</h1>
+    <nav>
+      <ul>
+        <li class="horizontal-list"><a href="#archive">Archive</a></li>
+        <li class="horizontal-list"><a href="#about">About</a></li>
+        <li class="horizontal-list"><a href="#contact">Contact</a></li>
+      </ul>
+    </nav>
+    <i class="material-icons" style="font-size:36px">menu</i>
+  </header>
+
+  <main>
     <section class="big-news">
       <!-- The big news content -->
+      <div class="big-news-text">
+        <h2>Succulents are nice</h2>
+        <p>här skriver jag en text om suckulenter</p>
+      </div>
+      <img class="big-news-image" src="./images/echeveria.jpg" alt="picture of echeveria">
     </section>
 
-    <section class="">
+    <section class="news-grid">
       <!-- The other news  -->
+      <div class="news-item">
+        <img src="./images/aloe.jpg" alt="picture of aloe">
+        <h3>Aloe family</h3>
+        <p>Aloe family bla bla bla</p>
+      </div>
+      <div class="news-item">
+        <img src="./images/aloe.jpg" alt="picture of aloe">
+        <h3>Aloe family</h3>
+        <p>Aloe family bla bla bla</p>
+      </div>
+      <div class="news-item">
+        <img src="./images/aloe.jpg" alt="picture of aloe">
+        <h3>Aloe family</h3>
+        <p>Aloe family bla bla bla</p>
+      </div>
+      <div class="news-item">
+        <img src="./images/aloe.jpg" alt="picture of aloe">
+        <h3>Aloe family</h3>
+        <p>Aloe family bla bla bla</p>
+      </div>
+      <div class="news-item">
+        <img src="./images/aloe.jpg" alt="picture of aloe">
+        <h3>Aloe family</h3>
+        <p>Aloe family bla bla bla</p>
+      </div>
+      <div class="news-item">
+        <img src="./images/aloe.jpg" alt="picture of aloe">
+        <h3>Aloe family</h3>
+        <p>Aloe family bla bla bla</p>
+      </div>
+      <div class="news-item">
+        <img src="./images/aloe.jpg" alt="picture of aloe">
+        <h3>Aloe family</h3>
+        <p>Aloe family bla bla bla</p>
+      </div>
+      <div class="news-item">
+        <img src="./images/aloe.jpg" alt="picture of aloe">
+        <h3>Aloe family</h3>
+        <p>Aloe family bla bla bla</p>
+      </div>
     </section>
-  </body>
+  </main>
+
+  <footer></footer>
+</body>
+
 </html>
