V3_corrected padding and typos

--- a/code/index.html
+++ b/code/index.html
@@ -125,7 +125,7 @@
           <hr />
           <p>
             Coral reefs provide an important ecosystem for life underwater,
-            protect coastal areas and provide a crucial source of income fo
+            protect coastal areas and provide a crucial source of income for
             millions of people.
           </p>
           <div class="button-wrapper">
@@ -148,7 +148,7 @@
           <hr />
           <p>
             These types of human interference present the biggest threat to
-            oceans
+            oceans.
           </p>
           <div class="button-wrapper">
             <a
@@ -176,9 +176,9 @@
           </h3>
           <hr />
           <p>
-            In the summer of 2023, humanity has lived through the hottest month
-            its history, but the effects of the heatwaves stretch far beyond the
-            land.
+            In the summer of 2023, humanity has lived through the hottest months
+            in its history, but the effects of the heatwaves stretch far beyond
+            the land.
           </p>
           <div class="button-wrapper">
             <a
@@ -223,7 +223,7 @@
           <h3>Time to phase out bottom trawling</h3>
           <hr />
           <p>
-            Did you know, that on ot the most destructive fishing methods -
+            Did you know, that one of the most destructive fishing methods -
             bottom trawling - is still taking place even within Marine Protected
             Areas (MPAs)?
           </p>
