--- a/code/index.html
+++ b/code/index.html
@@ -18,7 +18,7 @@
         <!-- Some kind of logo and navbar -->
         
         <div class="logo">
-          <img src="Namnlös.jpeg" alt="logo">
+          <img src="title.jpeg" alt="logo">
         </div>
           
         <nav>
