added a banner and finished up the project

--- a/code/index.html
+++ b/code/index.html
@@ -6,8 +6,7 @@
   <!-- Change the title below -->
   <title>Fasnacht - The Swiss Carnival</title>
   <link rel="stylesheet" href="./style.css" />
-  <!-- dont forget the meta tag for responsiveness -->
-  <!--added:)-->
+  <!-- the meta tag for responsiveness -->
   <meta name="viewport" content="width-device-width, initial-scale=1.0">
 </head>
 
@@ -27,6 +26,15 @@
           <button class="item"><a href="#">Copyright & Impressum</a></button>
         </div>
       </nav>
+    </div>
+    <!--News Banner-->
+    <div class="bannerwrapper">
+      <div class="banner">
+        <div class="banneritem">Fasnacht NEWS</div>
+        <div class="banneritem">Fasnacht NEWS</div>
+        <div class="banneritem">Fasnacht NEWS</div>
+        <div class="banneritem">Fasnacht NEWS</div>
+      </div>
     </div>
   </header>
 
