--- a/code/index.html
+++ b/code/index.html
@@ -43,7 +43,7 @@
       <p class="main-news-article">      
         Artichoke aubergine beet beetroot bell bok bush cauliflower chard chestnut chickweed choy coriander courgette dandelion desert dulse epazote fava gourd green greens j. Cabbage cauliflower chickpea coriander courgette dandelion eggplant endive gourd greens gumbo. Avocado beet bologi bona burdock catsear caulie celery chard chickpea corn courgette cress dandelion epazote esse garlic gourd green gumbo j. Aubergine beetroot bok bush celtuce chickweed chicory courgette garbanzo gourd horseradish.
       </p>
-      <button>Read more</button>
+      <button class="main-button">Read more</button>
     </section>
 
     <div class="small-news">
@@ -53,6 +53,9 @@
         <p class="caption">Photo by Erika Wernbro</p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      <div class="button">
+        <button>Read more</button>
+      </div>
     </div>
     <div class="small-news">
       <h3>The burger battle settled</h3>
@@ -61,6 +64,7 @@
         <p class="caption">Photo by <a href="https://unsplash.com/@dcocciardi?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Delfina Cocciardi</a> on <a href="https://unsplash.com/photos/burger-with-lettuce-and-tomato-NDPBK-d-03M?utm_content=creditCopyText&utm_medium=referral&utm_source=unsplash">Unsplash</a></p>
       </div>
       <p>Beetroot black-eyed bona brussels burdock bush cabbage caulie celtuce chard chicory collard corn courgette earthnut fava garbanzo garlic j grape greens. Beetroot broccoli cabbage cauliflower chard choy endive fennel greens gumbo. Amaranth arugula asparagus bitterleaf bok burdock bush cabbage catsear celery cress daikon desert dulse eggplant esse fava grape greens.</p>
+      <button>Read more</button>
     </div>
     <div class="small-news">
       <h3>She made cheesecake cheeseless</h3>
